fix learn more button on mobile

--- a/public/styles/_kali.scss
+++ b/public/styles/_kali.scss
@@ -105,7 +105,7 @@ body {
   #technology .banner-overlay-container-brain{
 	top: calc(45%);
 	left:0;
-	font-size: 2em;
+	font-size: 1.4em;
   }
 
 }
@@ -1172,7 +1172,7 @@ End Product Page
 	//font-size: em(18px);
 	//font-family: 'Open Sans', sans-serif;
 	text-transform: uppercase;
-	letter-spacing: 2px;
+	//letter-spacing: 2px;
 	-webkit-font-smoothing: antialiased;
 	
 	&:hover {
